# Fumen

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.processor  Dockerfile.soundfonts  README.md  favicon-check.json
.github/workflows/: publish-app-images.yml
backend/: Cargo.toml
backend/crates/fumen-backend/: Cargo.toml
backend/crates/fumen-backend/src/: app.rs  main.rs  openapi.rs  schemas.rs  telemetry.rs
backend/crates/fumen-backend/src/routes/: admin.rs  auth.rs  me.rs  mod.rs  public.rs
backend/crates/fumen-backend/src/services/: auth.rs  mod.rs  music.rs
backend/crates/fumen-core/: Cargo.toml
backend/crates/fumen-core/src/: auth.rs  config.rs  db.rs  drums.rs  lib.rs  models.rs  music.rs  schema.rs  storage.rs  telemetry.rs  util.rs
backend/crates/fumen-processor/: Cargo.toml
backend/crates/fumen-processor/src/: audio.rs  error.rs  lib.rs  main.rs  processing.rs  state.rs  telemetry.rs  worker.rs
backend/crates/fumen-processor/src/services/: music.rs
backend/migrations/20260413120000_initial_schema/: down.sql  up.sql
backend/migrations/20260415120000_score_annotations/: down.sql  up.sql
backend/migrations/20260416120000_score_annotation_instrument_name/: down.sql  up.sql
backend/migrations/20260416123000_score_annotation_system_y_ratio/: down.sql  up.sql
backend/migrations/20260416150000_score_annotation_semantic_position/: down.sql  up.sql
backend/migrations/20260417113000_music_subtitle/: down.sql  up.sql
backend/migrations/20260417170000_score_annotation_system_y_ratio/: down.sql  up.sql
backend/migrations/20260425133000_processing_jobs/: up.sql
backend/migrations/20260426124500_processing_job_progress_state/: down.sql  up.sql
backend/src/: app.rs  audio.rs  config.rs  db.rs  main.rs  models.rs  openapi.rs  schema.rs  schemas.rs  storage.rs  telemetry.rs
backend/src/routes/: admin.rs  auth.rs  me.rs  mod.rs  public.rs
backend/src/services/: auth.rs  mod.rs  music.rs  processing.rs
docker/: frontend-entrypoint.sh
frontend/: .gitignore  README.md  arvalez.toml  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json
frontend/public/: config.js
frontend/scripts/: generate-api-client.mjs  playwright-live.mjs
frontend/src/: App.svelte  app.css  app.html
frontend/src/adapters/fumen-backend/: README.md  package.json
frontend/src/components/: AccountModal.svelte  AdminLayout.svelte  AdminRecordCard.svelte  AppConfigModal.svelte  BaseModal.svelte  ConfirmModal.svelte  CredentialModal.svelte  CustomSelect.svelte  InstrumentStrip.svelte  Mixer.svelte  ScannerModal.svelte  ScoreIcon.svelte  TopBar.svelte  UserMenu.svelte
frontend/src/components/admin/: AdminCard.svelte  AdminEnsembleCard.svelte  AdminScoreCard.svelte  AdminUserCard.svelte
frontend/src/components/log-block/: LogBlock.svelte  LogBlockEntry.svelte  processingLogProvider.ts  shared.ts  types.ts
frontend/src/components/modals/: AccountModal.svelte  AnnotationModal.svelte  AppConfigModal.svelte  BaseModal.svelte  ConfirmModal.svelte  CreateEnsembleModal.svelte  CreateUserModal.svelte  CredentialModal.svelte  EditScoreModal.svelte  EditUserModal.svelte  EnsembleRolePickerModal.svelte  ManageEnsembleMembersModal.svelte  ManageEnsembleScoresModal.svelte  ModalStore.svelte  ScannerModal.svelte  ScoreEnsemblePickerModal.svelte  ScoreInfoModal.svelte  UploadScoreModal.svelte  index.ts  (+4 more)
frontend/src/lib/: admin-permissions.ts  admin-state.svelte.ts  api.ts  app-shell.svelte.ts  auth-client.ts  image.ts  midi-player.ts  portal.ts  roles.ts  score-viewer.ts  stem-mixer.ts  stem-quality.ts  utils.ts
frontend/src/pages/: AdminEnsemblesSection.svelte  AdminPage.svelte  AdminScoresSection.svelte  AdminUsersSection.svelte  HomePage.svelte  ListenPage.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
helm/: Chart.yaml  values.example.yaml  values.yaml
helm/templates/: _helpers.tpl  backend-deployment.yaml  backend-ingress.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-ingress.yaml  frontend-service.yaml  processor-deployment.yaml  processor-scaledjob.yaml  processor-scaledobject.yaml
(+10 files in other folders)
