[package]
name = "fumen-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
aws-credential-types = "1.2.2"
midly = "0.5"
aws-sdk-s3 = "1.96.0"
axum = { version = "0.8.4", features = ["multipart"] }
bytes = "1.10.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
diesel = { version = "2.3.7", features = ["postgres_backend"] }
diesel-async = { version = "0.8.0", features = ["bb8", "migrations", "postgres"] }
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
flate2 = "1.1.0"
fumen-core = { path = "../fumen-core" }
fumen-processor = { path = "../fumen-processor" }
http = "1.3.1"
jsonwebtoken = "9"
opentelemetry = "0.31.0"
opentelemetry-http = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["http-proto", "reqwest-blocking-client"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
qrcode = "0.14.1"
rand = "0.9.2"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.20.0"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["compression-br", "compression-gzip", "cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
uuid = { version = "1.18.1", features = ["v4"] }
roxmltree = "0.20.0"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
