[package]
name = "fumen-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
aws-credential-types = "1.2.2"
aws-sdk-s3 = "1.96.0"
bytes = "1.10.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
diesel = { version = "2.3.7", features = ["postgres_backend"] }
diesel-async = { version = "0.8.0", features = ["bb8", "migrations", "postgres"] }
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["http-proto", "reqwest-blocking-client"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
rand = "0.9.2"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras"] }
uuid = { version = "1.18.1", features = ["v4"] }
