[package]
name = "fumen-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
diesel = { version = "2.3.7", features = ["postgres_backend"] }
diesel-async = { version = "0.8.0", features = ["bb8", "migrations", "postgres"] }
flate2 = "1.1.0"
fumen-core = { path = "../fumen-core" }
midly = "0.5"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["http-proto", "reqwest-blocking-client"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking"] }
roxmltree = "0.20.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.20.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
